# learn-python

./: .replit  1-kura.py  README.md  datatip.py  indek.py  kest.py  kura.py  lis.py  lup.py  mini_database.py  oop.py  oop2.py  pyproject.toml  split_join.py  tuple.py  weather.csv
MachineLearning/: README.md
ObjectOrientedProgramming/: 2-oop.py  3-oop.py  4-init.py  5-classes_vs_object.py  oop.py
Webscraping/: script.py  script2.py
leaarn/: 4-ifelse.py
learn/: 10-list.py  11-index_slicing.py  12-split_join.py  13-tuples.py  14-sets.py  15-mini_database.py  16-mutability.py  17-list_comp.py  18-regex.py  19-datetime_module.py  20-zip.py  21-file_io.py  21-file_io.txt  22-lambda_function.py  23-args_kwargs.py  3-cal.py  7-DataTypes.py  8-casting.py  9-strings.py  README.md
