[tool.poetry]
name = "repl_python3_learn-python"
version = "0.1.0"
description = ""
authors = ["Masiluy <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
pandas = "^1.3.3"
pytz = "^2021.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
